--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,15 @@
   font-family:'Poppins', sans-serif;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body{
   background:#fbfbff;
   color:#1c1c1c;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .container{
